@@ -1,5 +1,7 @@
 2006-12-21  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/gids.c: Added gids map timing information to log message.
+
 	* HISTORY, META, NEWS: Updated for 0.5.7 release.
 
 2006-12-20  Chris Dunlap  <cdunlap@llnl.gov>
